<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/border_lr_dimen">
    <!-- 提示界面 -->

    <RelativeLayout
        android:id="@+id/note_nav_hint_data_rl"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            android:id="@+id/note_nav_hint_year_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/note_nav_hint_data_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/content_space_between_dimen"
            android:gravity="end"
            android:text="@string/base_format_year_month_day"
            android:textColor="@color/accessoryColor"
            android:textSize="@dimen/subheading_text_size" />

        <TextView
            android:id="@+id/note_nav_hint_data_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/base_format_day"
            android:textColor="@color/colorPrimary"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/note_nav_hint_week_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/note_nav_hint_data_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/content_space_between_dimen"
            android:text="@string/base_format_week"
            android:textColor="@color/accessoryColor"
            android:textSize="@dimen/subheading_text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/note_nav_hint_ibtn"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_button_white"
            android:contentDescription="@string/base_image"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_black_24dp" />

    </RelativeLayout>
</LinearLayout>