<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/item_choose_file_top_v"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#EEE" />

    <RelativeLayout
        android:id="@+id/item_choose_file_content_rl"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/item_choose_file_content_left_cbox"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center" />

        <com.inz.z.base.view.widget.RoundImageView
            android:id="@+id/item_choose_file_small_riv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="08dp"
            android:layout_toEndOf="@id/item_choose_file_content_left_cbox"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_vd_excel"
            app:round_image_view_radius="8dp" />

        <LinearLayout
            android:id="@+id/item_choose_file_content_title_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/item_choose_file_small_riv"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_choose_file_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/base_title"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/item_choose_file_detail_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="04dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_choose_file_create_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/base_time"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/item_choose_file_size_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/base_content"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>



    <View
        android:id="@+id/item_choose_file_bottom_v"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#EEE" />

</LinearLayout>